--- a/upsite/public/index.html
+++ b/upsite/public/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>LadderCorp</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="index.pack.js"></script>
     <div id="root"></div>
   </body>
 </html>
