--- a/upsite/public/index.html
+++ b/upsite/public/index.html
@@ -10,5 +10,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="text/javascript" src="/upsite/src/index.js"></script>
   </body>
 </html>
