--- a/upsite/public/index.html
+++ b/upsite/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>LadderCorp</title>
+    <title>LadderCorp testing</title>
   </head>
   <body>
     <div id="root"></div>
